<resources>
    <string name="app_name">PJ-Pos</string>
    <string name="app_version">PJ-Pos 1.0</string>

    <string name="nota_name">PJPos_Sales_</string>
    <string name="report_sales_name">PJPos_Report_Sales_</string>
    <string name="report_purchase_name">PJPos_Report_Purchase_</string>

    <string name="menu_1">Penjualan</string>
    <string name="menu_2">Pembelian</string>
    <string name="menu_3">Produk</string>
    <string name="menu_4">Supplier</string>
    <string name="menu_5">Pelanggan</string>
    <string name="menu_6">Laporan</string>
    <string name="menu_7">Keluar</string>
    <string name="menu_8">Piutang</string>

    <string name="btn_save">Simpan</string>
    <string name="sell_price">Harga Jual</string>
    <string name="purchase_price">Harga Beli</string>
    <string name="curr_stock">Stok sekarang</string>
    <string name="prod_id">ID Produk</string>
    <string name="prod_name">Nama Produk</string>
    <string name="prod_uom">UOM Produk</string>
    <string name="btn_generate">Cetak Laporan</string>
    <string name="start_date">Mulai tanggal :</string>
    <string name="end_date">Sampai tanggal :</string>

    <string name="title_1">Pilih Pelanggan</string>

    <string-array name="main_menu">
        <item>@string/menu_1</item>
        <item>@string/menu_2</item>
        <item>@string/menu_8</item>
        <item>@string/menu_3</item>
        <item>@string/menu_4</item>
        <item>@string/menu_5</item>
        <item>@string/menu_6</item>
        <item>@string/menu_7</item>
    </string-array>

    <array name="main_menu_icon">
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
        <item>@drawable/ic_sales_order</item>
    </array>
</resources>
