<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.AddProductActivity">

    <EditText
            android:id="@+id/etIdProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_border"
            android:enabled="false"
            android:fontFamily="@font/acme"
            android:hint="@string/prod_id"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/etNameProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:hint="@string/prod_name"
            android:inputType="textCapWords"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etIdProd" />

    <EditText
            android:id="@+id/etQtyProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:hint="@string/curr_stock"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            android:enabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etNameProd" />

    <EditText
            android:id="@+id/etUomProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:hint="@string/prod_uom"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etQtyProd" />

    <EditText
            android:id="@+id/etSellPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:hint="@string/sell_price"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUomProd" />

    <EditText
            android:id="@+id/etBuyPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:hint="@string/purchase_price"
            android:inputType="number"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etSellPrice" />

    <Button
            android:id="@+id/btnSaveProd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/acme"
            android:text="@string/btn_save"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
            android:id="@+id/progressSaveProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@+id/btnSaveProd"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:loader_animDur="100"
            app:loader_bigCircleRadius="40dp"
            app:loader_circleRadius="8dp"
            app:loader_defaultColor="@color/colorAccent"
            app:loader_firstShadowColor="@color/colorPrimary"
            app:loader_secondShadowColor="@color/colorPrimary"
            app:loader_selectedColor="@color/colorPrimary"
            app:loader_showRunningShadow="true" />

</androidx.constraintlayout.widget.ConstraintLayout>