<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        tools:context=".ui.ReportActivity">

    <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/start_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/acme"
            android:text="@string/end_date"
            app:layout_constraintStart_toStartOf="@+id/etEndDate"
            app:layout_constraintTop_toTopOf="parent" />

    <EditText
            android:id="@+id/etStartDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="5dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:editable="false"
            android:onClick="showDatePicker"
            app:layout_constraintEnd_toStartOf="@+id/etEndDate"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
            android:id="@+id/etEndDate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/custom_border"
            android:fontFamily="@font/acme"
            android:paddingStart="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:singleLine="true"
            android:textColor="@android:color/black"
            android:textSize="15sp"
            android:editable="false"
            android:onClick="showDatePicker"
            app:layout_constraintBottom_toBottomOf="@+id/etStartDate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/etStartDate"
            app:layout_constraintTop_toTopOf="@+id/etStartDate" />

    <com.agrawalsuneet.dotsloader.loaders.CircularDotsLoader
            android:id="@+id/progressReport"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/linearLayout"
            app:loader_animDur="100"
            app:loader_bigCircleRadius="40dp"
            app:loader_circleRadius="8dp"
            app:loader_defaultColor="@color/colorAccent"
            app:loader_firstShadowColor="@color/colorPrimary"
            app:loader_secondShadowColor="@color/colorPrimary"
            app:loader_selectedColor="@color/colorPrimary"
            app:loader_showRunningShadow="true" />

    <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/custom_border"
            android:orientation="vertical"
            android:padding="5dp"
            app:layout_constraintBottom_toTopOf="@+id/btnGenerate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etStartDate">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Laporan :"
                android:fontFamily="@font/acme"
                android:textSize="15sp"/>

        <androidx.cardview.widget.CardView
                android:id="@+id/cvSalesReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <View
                        android:layout_width="5dp"
                        android:layout_height="60dp"
                        android:background="@color/colorPrimary" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:weightSum="5">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_weight="3"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/acme"
                                android:text="Laporan Penjualan"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                            <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_date" />

                            <TextView
                                    android:id="@+id/tvReportSaleDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="@font/acme"
                                    android:text="08-APR-20 s/d 20-APR-20"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginRight="10dp"
                                android:gravity="center_vertical">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
                android:id="@+id/cvPurchaseReport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:visibility="gone"
                app:cardCornerRadius="2dp"
                app:cardElevation="4dp">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <View
                        android:layout_width="5dp"
                        android:layout_height="60dp"
                        android:background="@color/colorPrimary" />

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:orientation="horizontal"
                        android:paddingStart="10dp"
                        android:weightSum="5">

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_weight="3"
                            android:orientation="vertical">

                        <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/acme"
                                android:text="Laporan Pembelian"
                                android:textColor="@color/colorSecondaryText"
                                android:textSize="15dp"
                                android:textStyle="bold" />

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="5dp"
                                android:orientation="horizontal">

                            <ImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:scaleType="fitXY"
                                    android:src="@drawable/ic_date" />

                            <TextView
                                    android:id="@+id/tvReportPurcDate"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_marginStart="5dp"
                                    android:fontFamily="@font/acme"
                                    android:text="08-APR-20 s/d 20-APR-20"
                                    android:textColor="@color/colorPrimaryDark"
                                    android:textSize="12sp"
                                    android:textStyle="bold" />

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:layout_weight="2"
                            android:orientation="vertical">

                        <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="right"
                                android:layout_marginRight="10dp"
                                android:gravity="center_vertical">

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
            android:id="@+id/btnGenerate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:fontFamily="@font/acme"
            android:text="@string/btn_generate"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>